@@ -26,3 +26,5 @@ export { default as url_concat } from './src/url-concat.js';
 export { webpSupport } from './src/webp-support.js';
 export { dateToMysql } from './src/date-to-mysql.js';
 export { getHiddenHeight } from './src/getHiddenHeight.js';
+export { enable_submit_btns } from './src/enable-submit-btns.js';
+export { formMultiselect } from './src/form-multiselect.js';
