@@ -3,3 +3,4 @@
 2023-04-12T10:38:59.823Z |            1.2.0 | DateTime format: option to hide time portion of date
 2023-06-07T10:49:57.599Z |            1.3.0 | dateToMysql
 2023-07-24T07:36:51.439Z |            1.4.0 | geHiddenHeight
+2023-07-24T12:07:21.529Z |            1.5.0 | Merged scripts from form-utilities (archived)
